--- a/app/src/main/res/layout/homefragment.xml
+++ b/app/src/main/res/layout/homefragment.xml
@@ -1,20 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:orientation="vertical">
 
     <!-- 头部 -->
+    <com.jcodecraeer.xrecyclerview.XRecyclerView
+        android:id="@+id/XRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <RelativeLayout
-        android:id="@id/title"
+        android:id="@+id/title"
         android:layout_width="fill_parent"
         android:layout_height="48dp"
-        android:background="@android:color/white"
+        android:background="@drawable/common_tab_bg"
         android:gravity="center_vertical">
 
         <RelativeLayout
-            android:id="@+id/settingImg"
+            android:id="@+id/locationImg"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="60.0dip"
             android:layout_height="fill_parent"
             android:layout_alignParentLeft="true"
@@ -60,19 +65,22 @@
 
     <!--滑动界面-->
 
-    <in.srain.cube.views.ptr.PtrClassicFrameLayout
-        android:id="@+id/ptr_frame"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <include layout="@layout/view_ad"/>
-            <ListView
-                android:id="@+id/listView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-        </LinearLayout>
-    </in.srain.cube.views.ptr.PtrClassicFrameLayout>
-</LinearLayout>
+    <!--<in.srain.cube.views.ptr.PtrClassicFrameLayout-->
+    <!--android:id="@+id/ptr_frame"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent">-->
+
+    <!--&lt;!&ndash;<LinearLayout&ndash;&gt;-->
+    <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
+    <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
+    <!--&lt;!&ndash;android:orientation="vertical">&ndash;&gt;-->
+
+    <!--&lt;!&ndash;<include layout="@layout/view_ad"/>&ndash;&gt;-->
+
+    <!--<ListView-->
+    <!--android:id="@+id/listView"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"/>-->
+    <!--&lt;!&ndash;</LinearLayout>&ndash;&gt;-->
+    <!--</in.srain.cube.views.ptr.PtrClassicFrameLayout>-->
+</FrameLayout>
