--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,13 @@
     <color name="invest_product_list">#d9d9d9</color>
     <color name="transparent">#00000000</color>
     <color name="black">#000000</color>
+    <color name="red">#ffff0000</color>
+    <color name="viewfinder_mask">#60000000</color>
+    <color name="dark_blue">#ff082a7a</color>
+    <color name="btn_order_normal">#ff08a852</color>
+    <color name="btn_order_pressed">#ff08bc5b</color>
     <color name="common_item_pressed_color">#ffd9d9d9</color>
+    <color name="text_gray">#ff656565</color>
     <color name="content_backgroud">#f2f2f2</color>
     <color name="add_bank_card_color">#4169E1</color>
     <color name="top_bar_normal_bg">#ff42a26e</color>
@@ -28,7 +34,9 @@
     <color name="turn_color">#ff08bc5b</color>
     <color name="text_highgray">#ff999999</color>
     <color name="text_green">#ff14a83b</color>
-
+    <color name="text1">#59B29C</color>
+    <color name="text2">#333333</color>
+    <color name="split_line">#11112233</color>
     <color name="tab_txt_selected_color">#d1564f</color>
     <color name="tab_txt_normal_color">#616977</color>
     <color name="phone_number_tips_txt_color">#ff9933</color>
