--- a/app/src/main/res/layout/item_search_car.xml
+++ b/app/src/main/res/layout/item_search_car.xml
@@ -52,7 +52,7 @@
                 android:layout_height="55.0dip">
 
                 <!--<com.firstcargo.dwuliu.view.RoundImageView-->
-                <eo.cn.yxwuliu.ui.RoundImageView
+                <eo.cn.yxwuliu.widgets.RoundImageView
                     android:id="@+id/face_im"
                     android:layout_width="50.0dip"
                     android:layout_height="50.0dip"
