--- a/app/src/main/res/layout/view_ad.xml
+++ b/app/src/main/res/layout/view_ad.xml
@@ -12,7 +12,7 @@
         android:orientation="horizontal" >
 
         <LinearLayout
-            android:id="@+id/yunjia"
+            android:id="@+id/deliveryCar"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
@@ -25,7 +25,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="运价查询"
+                android:text="发布车源"
                 android:textSize="14sp"  />
         </LinearLayout>
         <LinearLayout
@@ -47,7 +47,7 @@
 
         </LinearLayout>
         <LinearLayout
-            android:id="@+id/deliveryCar"
+            android:id="@+id/Mycar"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
@@ -60,12 +60,13 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="发布车源"
+                android:text="我的车队"
                 android:textSize="14sp"  />
 
         </LinearLayout>
         <LinearLayout
-            android:id="@+id/deliveryGoods"
+
+            android:id="@+id/tool_box_ll"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
@@ -78,7 +79,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="发布货源"
+                android:text="工具箱"
                 android:textSize="14sp"  />
 
         </LinearLayout>
@@ -90,7 +91,7 @@
         android:orientation="horizontal" >
 
         <LinearLayout
-            android:id="@+id/tool_box_ll"
+            android:id="@+id/deliveryGoods"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
@@ -103,11 +104,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="工具箱"
+                android:text="发布货源"
                 android:textSize="14sp"  />
 
         </LinearLayout>
         <LinearLayout
+            android:id="@+id/yunjia"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
@@ -120,7 +122,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="我的车队"
+                android:text="运价查询"
                 android:textSize="14sp"  />
 
         </LinearLayout>
@@ -156,7 +158,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="百宝箱"
+                android:text="其他"
                 android:textSize="14sp"  />
 
         </LinearLayout>
